<resources>
    <string name="app_name">InsightCanvas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SurveyIntro">See the Details and Provide FeedBack</string>
    <string name="SeeAll">See Details</string>
    <string name="createPost">Create a Survey</string>
    <string name="details">Details of Survey</string>
    <string name="category">Category</string>
    <string name="select">Select an Image Related to Survey</string>
    <string name="upload">Upload The Survey!</string>
    <array name="Category">
        <item>Social Issues</item>
        <item>National</item>
        <item>Political</item>
        <item>Technology</item>
        <item>Health and Wellness</item>
        <item>Education</item>
        <item>Market Research</item>
        <item>Travel and Hospitality</item>
        <item>Product Development</item>
        <item>Financial</item>
        <item>Cultural</item>
        <item>Sports</item>
        <item>Job</item>
    </array>
    <array name="FilterCategory">
        <item>All</item>
        <item>Social Issues</item>
        <item>National</item>
        <item>Political</item>
        <item>Technology</item>
        <item>Health and Wellness</item>
        <item>Education</item>
        <item>Market Research</item>
        <item>Travel and Hospitality</item>
        <item>Product Development</item>
        <item>Financial</item>
        <item>Cultural</item>
        <item>Sports</item>
        <item>Job</item>
    </array>
    <array name="sortBytime">
        <item>New to Old</item>
        <item>Old to New</item>
    </array>
</resources>